apps/production/resumelo-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resumelo-ui
  namespace: resumelo-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: resumelo-ui
